# DielModels

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  start.sh  tox.ini
.github/workflows/: cd.yml  ci.yml
DFA/: dfa_multiquercus.py  differential_flux_analysis_tomato.py
PCA/: pca.py  pca_tomato.py
PCA + T-SNE/: pca_tsne.py  pca_tsne_quercus.py
PCA_T-SNE/: pca_tsne.py  pca_tsne_tomato.py
Validation/: dfa_tomato.py  produced_at_day.xlsx  produced_at_day_tomato.xlsx  produced_at_night.xlsx  produced_at_night_tomato.xlsx  simulation_sp.py  simulation_sp_tomato.py
docs/: conf.py  diel_models.md  diel_models_docs.md  index.md  modules.md  requirements_rtd.txt
docs/_static/: custom.css
examples/: (data) reactionConstraints.txt  (draft) Biosynthesis_reactions_fluxes.ipynb  (draft) DFA.ipynb  (draft) PCA + TSNE_df_filtrado.ipynb  (draft) PCA + TSNE_df_original.ipynb  (draft) compartments.ipynb  (draft) pipeline.ipynb  (draft) tomato_model_exploration.ipynb  AraGEM2010_copy.xml  Athaliana_cheung13.py  Colza.py  Complete_test.ipynb  DielModel_Pipeline.xml  Maize_C4GEM.py  Maize_Saha.py  Maize_Simons.py  Maize_iEB5204.py  Medicago.py  Model_Day.xml  Model_Night.xml  MultiQuercus.py  Populus.py  Quercus.py  Rice_Lakshmanan.py  Rice_OSI1136.py  Rice_Poolman.py  Sorghum.py  Soybean.py  SugarCane.py  TS4_MODEL_Test.ipynb  Testagem_Completa.ipynb  Tomato_2022.py  aragem_model_exploration.ipynb  aragem_photo.ipynb  carregar_modelos.ipynb  compartments.ipynb  dfa.ipynb  draft.ipynb  explore_model.ipynb  model_exploitation.ipynb  (+14 more)
src/diel_models/: biomass_adjuster.py  biomass_regulator.py  compartments_creator.py  (+14 more)
validation/: aragem_reactions_fluxes.py  models_sumaries.py  notes  potato_ratios.py  produced_at_day_tomato.xlsx  produced_at_night_tomato.xlsx  quercus_ratios.py  quercus_reactions_fluxes.py  simulation_biomass_objective.py  simulation_light_objective.py  simulation_sp.py  simulation_sp_tomato.py  tomato_reactions_fluxes.py
(+143 files in other folders)
