[metadata]
name = diel_models
version = 1.1.2
description = diel_models:
long_description = file: README.md
long_description_content_type = text/markdown
keywords = plants, diel models
author = Luciana Martins and João Capela
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.8
zip_safe = False
include_package_data = True
install_requires =
    cobra


[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=7.1.1
    pytest-cov>=3.0.0
    mypy>=0.942
    flake8>=4.0.1
    tox>=3.25.0

[options.package_data]
diel_models = py.typed

[flake8]
max-line-length = 160
